--- a/crm/core/templates/core/base.html
+++ b/crm/core/templates/core/base.html
@@ -10,10 +10,23 @@
     <body>
         <nav class="py-6 px-8 flex justify-between bg-teal-500 text-white">
             <a href="/" class="text-white">MAYA CRM</a>
-            <div class="space-x-2">
+            <div class="flex space-x-2">
                 <a href="{% url 'about' %}" class="text-white py-4 px-6">About</a>
-                <a href="/" class="text-white py-4 px-6 bg-teal-600 rounded-xl">Login</a>
-                <a href="/" class="text-white py-4 px-6 bg-teal-300 rounded-xl">Signup</a>
+                
+                {% if request.user.is_authenticated %}
+                    <a href="{% url 'dashboard' %}" class="text-white py-4 px-6 bg-teal-600 rounded-xl">Dashboard</a>
+                    <form method="POST" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="text-white py-4 px-6 bg-red-300 rounded-xl">Logout</button>
+                    </form>
+                    {% comment %} <a href="{% url 'logout' %}" class="text-white py-4 px-6 bg-red-300 rounded-xl">Logout</a> {% endcomment %}
+                
+                {% else %}
+                    <a href="{% url 'login' %}" class="text-white py-4 px-6 bg-teal-600 rounded-xl">Login</a>
+                    <a href="{% url 'signup' %}" class="text-white py-4 px-6 bg-teal-300 rounded-xl">Signup</a>
+
+                {% endif %}
+               
             </div>
         </nav>
             {% block content %}
