--- a/crm/core/templates/core/base.html
+++ b/crm/core/templates/core/base.html
@@ -15,6 +15,7 @@
                 
                 {% if request.user.is_authenticated %}
                     <a href="{% url 'dashboard' %}" class="text-white py-4 px-6 bg-teal-600 rounded-xl">Dashboard</a>
+                    <a href="{% url 'leads_list' %}" class="text-white py-4 px-6 bg-teal-600 rounded-xl">Leads</a>
                     <form method="POST" action="{% url 'logout' %}">
                         {% csrf_token %}
                         <button type="submit" class="text-white py-4 px-6 bg-red-300 rounded-xl">Logout</button>
