--- a/crm/lead/templates/lead/add_lead.html
+++ b/crm/lead/templates/lead/add_lead.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="py-6 px-8">
         <h1 class="text-xl">Add Lead</h1>
-        <form method="post action=".">
+        <form method="post" action=".">
             {% csrf_token %}
             {{ form.as_p }}
 
