--- a/crm/core/templates/core/base.html
+++ b/crm/core/templates/core/base.html
@@ -30,6 +30,17 @@
                
             </div>
         </nav>
+
+            {% if messages %}
+                <div class="py-6 px-6 ">
+                    {% for message  in messages  %}
+                        <dir class="py-4 px-4 bg-teal-500 rounded-xl">
+                            {{ message }}
+                        </dir>
+                    {% endfor %}
+                </div>
+            {% endif %}
+
             {% block content %}
 
             {% endblock  %}
