--- a/crm/client/templates/client/clients_detail.html
+++ b/crm/client/templates/client/clients_detail.html
@@ -21,8 +21,8 @@
 
     <hr class="my-4">
 
-        <a href="#" class="py-2 px-4 rounded-xl bg-teal-500 text-white">Edit</a>
-        <a href="#" class="py-2 px-4 rounded-xl bg-red-500 text-white">Delete</a>
+        <a href="{% url 'clients_edit' client.id %}" class="py-2 px-4 rounded-xl bg-teal-500 text-white">Edit</a>
+        <a href="{% url 'clients_delete' client.id %}" class="py-2 px-4 rounded-xl bg-red-500 text-white">Delete</a>
 
     <hr class="my-4">
         
