--- a/crm/client/templates/client/clients_list.html
+++ b/crm/client/templates/client/clients_list.html
@@ -6,7 +6,7 @@
     <div class="py-6 px-8">
         <h1 class="mb-8 text-xl">Clients</h1>
 
-        <a href="#" class="mb-8 inline-bloc text-white py-4 px-4 bg-teal-600 rounded-xl">+ Client</a>
+        <a href="{% url 'clients_add' %}" class="mb-8 inline-bloc text-white py-4 px-4 bg-teal-600 rounded-xl">+ Client</a>
 
         
             <div class="mt-8">
